<resources>
    <string name="app_name">G-Commute</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txtPostTitle">Enter Post Title</string>
    <string name="txtPostDesc">Enter Post Description</string>
    <string name="editPostTitleHint">title</string>
    <string name="editPostDescHint">description</string>
    <string name="btnCreatePost">Create</string>
    <string name="btnSendText">SEND</string>
    <string name="chatBoxHint">Enter message</string>
    <string name="btnExitText">Exit Group</string>
</resources>
